# rgeos

./: draftexamples.R  sat091114.Rhistory
pkg/: .Rbuildignore  ChangeLog  DESCRIPTION  NAMESPACE  NEWS.md  configure  configure.ac  configure.in  configure.win
pkg/R/: AAA.R  Rgpc_funcs.R  bbox2SP.R  gpc_geos.R  labelpt.R  over.R  rgeos.R  rgeos_SpatialCollections.R  rgeos_SpatialRings.R  rgeos_SpatialRingsDataFrame.R  rgeos_buffer.R  rgeos_linearref.R  rgeos_misc.R  rgeos_predicate_binary.R  rgeos_predicate_unary.R  rgeos_simplify.R  rgeos_spExtensions_Methods.R  rgeos_topology.R  rgeos_topology_binary.R  rgeos_topology_relation.R  rgeos_union.R  rgeos_util.R  rgeos_wkt.R
pkg/data/: poly_ex.rda
pkg/inst/: ChangeLog  SVN_VERSION
pkg/inst/tests/: test-empty-geom.R  test-jts-xml.R  test-translate-empty.R  test-translate.R
pkg/inst/tests/testxml/general/: TestInteriorPoint.xml
pkg/man/: LinesIntersections.Rd  bbox2SP.rd  checkHolesGPC.Rd  checkPolygonsGEOS.Rd  class-gpc.poly.Rd  comment-functions.Rd  experimental-functions.Rd  gIntersection.Rd  gUnion.Rd  gpc.poly-class.Rd  labelpt.Rd  linref-gProject.Rd  misc-gBuffer.Rd  misc-gDistance.Rd  misc-gNearestPoints.Rd  misc-over.Rd  new-generics.Rd  pred-binary-gContains.Rd  pred-binary-gCrosses.Rd  pred-binary-gEquals.Rd  pred-binary-gIntersects.Rd  pred-binary-gRelate.Rd  pred-binary-gTouches.Rd  pred-unary-gIsSimple.Rd  pred-unary-gIsValid.Rd  thinnedSpatialPolyGEOS.Rd  topo-bin-gDifference.Rd  topo-bin-gIntersection.Rd  topo-bin-gSymdifference.Rd  topo-bin-gUnion.Rd  topo-unary-gBoundary.Rd  topo-unary-gCentroid.Rd  topo-unary-gConvexHull.Rd  topo-unary-gDelaunayTriangulation.Rd  topo-unary-gEnvelope.Rd  topo-unary-gMakeValid.Rd  topo-unary-gPointOnSurface.Rd  topo-unary-gSimplify.Rd  unionSpatialPolygonsGEOS.Rd  utility-functions.Rd
pkg/src/: Makevars  Makevars.win  gpc_geos.c  init.c  rgeos.c  rgeos.h  rgeos_R2geos.c  rgeos_R2geosMP.c  rgeos_area.c  rgeos_bbox.c  rgeos_buffer.c  rgeos_contains.c  rgeos_coord.c  rgeos_distance.c  rgeos_geos2R.c  rgeos_length.c  rgeos_linearref.c  rgeos_misc.c  rgeos_poly2nb.c  rgeos_predicate_binary.c  rgeos_predicate_unary.c  rgeos_sp.c  rgeos_topology.c  rgeos_topology_binary.c  rgeos_validate.c  rgeos_wkt.c  sp_rgeos.c
pkg/tests/: .Rhistory  leak_by_exception.Rout.save  test-all.R
pkg/tests/testthat/: test-linearref.R
www/: 404.html  authors.html  index.html  index.php  pkgdown.yml
www/news/: index.html
www/reference/: bbox2SP.html  bbox2SP.rd  class-Ring.html  class-SpatialCollections.html  class-SpatialRings.html  class-SpatialRingsDataFrame.html  class-gpc.poly.html  class-gpc.poly.nohole.html  comment-functions.html  constructor-SpatialCollections.html  constructor-SpatialRings.html  gpc-polyfile.html  (+41 more)
